force-app/main/default/objects/Governance_Risk_Event__c.object
<CustomObject>
    <label>公司治理風險事件</label>
    <nameField>
        <label>事件類別</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客戶</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>公司治理風險事件</relationshipLabel>
        <relationshipName>Governance_Risk_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>事件日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account__r.Owner.Employee_No__c</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Content__c</fullName>
        <label>事件內容</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Intensity__c</fullName>
        <label>事件強度</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governance_Risk_Event_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>公司治理風險事件外鍵</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Intensity__c</columns>
        <columns>Event_Content__c</columns>
        <columns>Account_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>